<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topChartsNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="@string/number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/topChartsImageView"
        app:layout_constraintEnd_toStartOf="@+id/topChartsImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topChartsImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topChartsImageView"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:layout_marginVertical="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/topChartsTitleTextView"
        app:layout_constraintStart_toEndOf="@id/topChartsNumberTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topChartsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/topChartsRatingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topChartsImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topChartsRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/topChartsTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/topChartsTitleTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topChartsStarImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/topChartsRatingTextView"
        app:layout_constraintStart_toEndOf="@+id/topChartsRatingTextView"
        app:layout_constraintTop_toTopOf="@+id/topChartsRatingTextView"
        app:srcCompat="@android:drawable/btn_star" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topChartsMemorySizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:text="@string/memory_size"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/topChartsRatingTextView"
        app:layout_constraintStart_toEndOf="@+id/topChartsStarImageView"
        app:layout_constraintTop_toTopOf="@+id/topChartsRatingTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>