<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".appstore.fragments.KidsFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/kidsBackgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/KidsBrowseByAgeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/browse_by_age"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kidsBackgroundImageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kidsAgesUpTo5Button"
            style="@style/BottomSheetTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_36dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/ages_up_to_5"
            app:layout_constraintStart_toStartOf="@id/KidsBrowseByAgeTextView"
            app:layout_constraintTop_toBottomOf="@id/KidsBrowseByAgeTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kidsAges6_8Button"
            style="@style/BottomSheetTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_0dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/ages_6_8"
            app:layout_constraintBottom_toBottomOf="@+id/kidsAgesUpTo5Button"
            app:layout_constraintStart_toEndOf="@id/kidsAgesUpTo5Button"
            app:layout_constraintTop_toTopOf="@+id/kidsAgesUpTo5Button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kidsAges9_12Button"
            style="@style/BottomSheetTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_0dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/ages_6_8"
            app:layout_constraintBottom_toBottomOf="@+id/kidsAges6_8Button"
            app:layout_constraintStart_toEndOf="@id/kidsAges6_8Button"
            app:layout_constraintTop_toTopOf="@+id/kidsAges6_8Button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kidsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kidsAges9_12Button"
            tools:listitem="@layout/list_item_kids" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>