<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mainForYouImageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/secondaryForYouImageView"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:layout_marginVertical="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainForYouImageView"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondaryForYouImageView"
            app:layout_constraintTop_toTopOf="@+id/secondaryForYouImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/secondaryForYouImageView"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/topChartsStarImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingTextView"
            app:layout_constraintStart_toEndOf="@+id/ratingTextView"
            app:layout_constraintTop_toTopOf="@+id/ratingTextView"
            app:srcCompat="@android:drawable/btn_star" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/topChartsMemorySizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/memory_size"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ratingTextView"
            app:layout_constraintStart_toEndOf="@+id/topChartsStarImageView"
            app:layout_constraintTop_toTopOf="@+id/ratingTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>